--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <app-header></app-header>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1>Hola iukones</h1>
+<section class="ae-container-fluid rk-main">
+    <app-portfolio></app-portfolio>
+</section>
 
 <app-footer></app-footer>
