se agrega useHash al routing, y se configura las opciones del menu para las redirecciones de paginas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <app-header></app-header>
 
 <section class="ae-container-fluid rk-main">
-    <app-portfolio></app-portfolio>
+    <!-- <app-portfolio></app-portfolio> -->
+    <!-- <app-about></app-about> -->
+    <!-- <app-product-details></app-product-details> -->
+    <router-outlet></router-outlet>
 </section>
 
 <app-footer></app-footer>
